--- a/OOPfied TTT/build.gradle
+++ b/OOPfied TTT/build.gradle
@@ -19,7 +19,7 @@ jar {
 //change the name of the class that is run on line 16 to match your own code
 task run;
 run.doFirst {
-    println "To run the GUI version of the program:\njava -jar build/libs/A3.jar"
+    println "To run the GUI version of the program:\njava -jar build/libs/'OOPfied TTT.jar'"
     println "To run the console version of the program:\njava -cp build/classes/java/main tictactoe.TextUI"
 }
 dependencies {
